removed unnecessary code; changed file names to delimiter-separated words; made "style" properties in the config begin with upper case to match the hierarchy format

--- a/src/ui/html/content/settings.html
+++ b/src/ui/html/content/settings.html
@@ -111,7 +111,7 @@
               <p data-i18n="settingNameTraceColor" class="ol-name"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Trace.style" name="strokeStyle" class="color-select-field" type="color" required>
+              <input data-hierarchy="Gesture.Trace.Style" name="strokeStyle" class="color-select-field" type="color" required>
             </div>
           </div>
           <div class="ol-item">
@@ -119,7 +119,7 @@
               <p data-i18n="settingNameTraceOpacity" class="ol-name"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Trace.style" name="opacity" class="input-field" type="number" required step="0.01" max="1" min="0">
+              <input data-hierarchy="Gesture.Trace.Style" name="opacity" class="input-field" type="number" required step="0.01" max="1" min="0">
             </div>
           </div>
           <div class="ol-item">
@@ -127,7 +127,7 @@
               <p data-i18n="settingNameTraceWidth" class="ol-name"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Trace.style" name="lineWidth" class="input-field" type="number" required step="1" max="999" min="1">
+              <input data-hierarchy="Gesture.Trace.Style" name="lineWidth" class="input-field" type="number" required step="1" max="999" min="1">
             </div>
           </div>
           <div class="ol-item">
@@ -136,7 +136,7 @@
               <p data-i18n="settingDescriptionTraceGrowth" class="ol-description"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Trace.style" name="lineGrowth" id="SettingLineGrowth" class="toggle-button" type="checkbox">
+              <input data-hierarchy="Gesture.Trace.Style" name="lineGrowth" id="SettingLineGrowth" class="toggle-button" type="checkbox">
               <label for="SettingLineGrowth"></label>
             </div>
           </div>
@@ -159,7 +159,7 @@
               <p data-i18n="settingNameCommandColor" class="ol-name"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Command.style" name="color" class="color-select-field" type="color" required>
+              <input data-hierarchy="Gesture.Command.Style" name="color" class="color-select-field" type="color" required>
             </div>
           </div>
           <div class="ol-item">
@@ -167,7 +167,7 @@
               <p data-i18n="settingNameCommandBackgroundColor" class="ol-name"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Command.style" name="backgroundColor" class="color-select-field" type="color" required>
+              <input data-hierarchy="Gesture.Command.Style" name="backgroundColor" class="color-select-field" type="color" required>
             </div>
           </div>
           <div class="ol-item">
@@ -175,7 +175,7 @@
               <p data-i18n="settingNameCommandBackgroundOpacity" class="ol-name"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Command.style" name="backgroundOpacity" class="input-field" type="number" required step="0.01" max="1" min="0">
+              <input data-hierarchy="Gesture.Command.Style" name="backgroundOpacity" class="input-field" type="number" required step="0.01" max="1" min="0">
             </div>
           </div>
           <div class="ol-item">
@@ -184,7 +184,7 @@
               <p data-i18n="settingDescriptionCommandFontSize" class="ol-description"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Command.style" name="fontSize" class="input-field" type="input" required pattern="[1-9][0-9]*(px|em|ex|%|in|cm|mm|pt|pc|vh|vw|vmin|vmax)">
+              <input data-hierarchy="Gesture.Command.Style" name="fontSize" class="input-field" type="input" required pattern="[1-9][0-9]*(px|em|ex|%|in|cm|mm|pt|pc|vh|vw|vmin|vmax)">
             </div>
           </div>
         </div>
@@ -207,7 +207,7 @@
               <p data-i18n="settingNameDirectionsColor" class="ol-name"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Directions.style" name="color" class="color-select-field" type="color" required>
+              <input data-hierarchy="Gesture.Directions.Style" name="color" class="color-select-field" type="color" required>
             </div>
           </div>
           <div class="ol-item">
@@ -215,7 +215,7 @@
               <p data-i18n="settingNameDirectionsBackgroundColor" class="ol-name"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Directions.style" name="backgroundColor" class="color-select-field" type="color" required>
+              <input data-hierarchy="Gesture.Directions.Style" name="backgroundColor" class="color-select-field" type="color" required>
             </div>
           </div>
           <div class="ol-item">
@@ -223,7 +223,7 @@
               <p data-i18n="settingNameDirectionsBackgroundOpacity" class="ol-name"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Directions.style" name="backgroundOpacity" class="input-field" type="number" required step="0.01" max="1" min="0">
+              <input data-hierarchy="Gesture.Directions.Style" name="backgroundOpacity" class="input-field" type="number" required step="0.01" max="1" min="0">
             </div>
           </div>
           <div class="ol-item">
@@ -232,7 +232,7 @@
               <p data-i18n="settingDescriptionDirectionsFontSize" class="ol-description"></p>
             </div>
             <div class="ol-input">
-              <input data-hierarchy="Gesture.Directions.style" name="fontSize" class="input-field" type="input" required pattern="[1-9][0-9]*(px|em|ex|%|in|cm|mm|pt|pc|vh|vw|vmin|vmax)">
+              <input data-hierarchy="Gesture.Directions.Style" name="fontSize" class="input-field" type="input" required pattern="[1-9][0-9]*(px|em|ex|%|in|cm|mm|pt|pc|vh|vw|vmin|vmax)">
             </div>
           </div>
           <div class="ol-item">
@@ -241,7 +241,7 @@
             </div>
             <div class="ol-input">
               <div class="select-wrapper">
-                <select data-hierarchy="Gesture.Directions.style" name="textAlign" class="select-field">
+                <select data-hierarchy="Gesture.Directions.Style" name="textAlign" class="select-field">
                   <option value="left" data-i18n="settingNameDirectionsTextAlignLeft"></option>
                   <option value="right" data-i18n="settingNameDirectionsTextAlignRight"></option>
                   <option value="center" data-i18n="settingNameDirectionsTextAlignCenter"></option>
