--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Gesturefy</title>
-  <link rel="icon" type="image/png" href="../../res/img/iconx32.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="/res/img/iconx32.png" sizes="16x16">
   <link rel="stylesheet" href="/ui/css/layout.css">
   <link rel="stylesheet" href="/ui/css/index.css">
   <link rel="stylesheet" href="/ui/css/modules/overlay.css">
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="/ui/css/modules/gesture-popup.css">
   <link rel="stylesheet" id="Theme">
 
-  <script src="/lib/backgroundCommons.js" defer></script>
+  <script src="/lib/background-commons.js" defer></script>
   <script src="/ui/js/index.js" defer></script>
 </head>
 
 <body>
   <div id ="Sidebar">
     <h1>
-      <img src="../../res/img/iconx96.png">
+      <img src="/res/img/iconx96.png">
       <span data-manifest="name"></span>
     </h1>
     <ul class="navigation">
