mass renaming of locale keys from "*Name*" to "*Label*"

--- a/src/ui/html/content/about.html
+++ b/src/ui/html/content/about.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/ui/css/content.css">
   <link rel="stylesheet" id="Theme">
 
-  <script src="/lib/backgroundCommons.js" defer></script>
+  <script src="/lib/background-commons.js" defer></script>
   <script src="/ui/js/content.js" defer></script>
   <script src="/ui/js/content/about.js" defer></script>
 </head>
