--- a/src/ui/html/content/extras.html
+++ b/src/ui/html/content/extras.html
@@ -19,7 +19,7 @@
       <section class="ol-section">
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="extraNameRockerActive" class="ol-name"></p>
+            <p data-i18n="extraLabelRockerActive" class="ol-name"></p>
             <p data-i18n="extraDescriptionRockerActive" class="ol-description"></p>
           </div>
           <div class="ol-input">
@@ -29,7 +29,7 @@
         </div>
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="extraNameRockerLeftMouseClick" class="ol-name"></p>
+            <p data-i18n="extraLabelRockerLeftMouseClick" class="ol-name"></p>
           </div>
           <div class="ol-input">
             <button data-hierarchy="Rocker" name="leftMouseClick" class="command-select-field"></button>
@@ -37,7 +37,7 @@
         </div>
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="extraNameRockerRightMouseClick" class="ol-name"></p>
+            <p data-i18n="extraLabelRockerRightMouseClick" class="ol-name"></p>
           </div>
           <div class="ol-input">
             <button data-hierarchy="Rocker" name="rightMouseClick" class="command-select-field"></button>
@@ -47,7 +47,7 @@
       <section class="ol-section">
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="extraNameWheelActive" class="ol-name"></p>
+            <p data-i18n="extraLabelWheelActive" class="ol-name"></p>
             <p data-i18n="extraDescriptionWheelActive" class="ol-description"></p>
           </div>
           <div class="ol-input">
@@ -57,22 +57,22 @@
         </div>
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="extraNameWheelMouseButton" class="ol-name"></p>
+            <p data-i18n="extraLabelWheelMouseButton" class="ol-name"></p>
             <p data-i18n="extraDescriptionWheelMouseButton" class="ol-description"></p>
           </div>
           <div class="ol-input">
             <div class="select-wrapper">
               <select data-hierarchy="Wheel" name="mouseButton" class="select-field">
-                <option value="1" data-i18n="settingNameMouseButtonLeft"></option>
-                <option value="2" data-i18n="settingNameMouseButtonRight"></option>
-                <option value="4" data-i18n="settingNameMouseButtonMiddle"></option>
+                <option value="1" data-i18n="settingLabelMouseButtonLeft"></option>
+                <option value="2" data-i18n="settingLabelMouseButtonRight"></option>
+                <option value="4" data-i18n="settingLabelMouseButtonMiddle"></option>
               </select>
             </div>
           </div>
         </div>
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="extraNameWheelUp" class="ol-name"></p>
+            <p data-i18n="extraLabelWheelUp" class="ol-name"></p>
           </div>
           <div class="ol-input">
             <button data-hierarchy="Wheel" name="wheelUp" class="command-select-field"></button>
@@ -80,7 +80,7 @@
         </div>
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="extraNameWheelDown" class="ol-name"></p>
+            <p data-i18n="extraLabelWheelDown" class="ol-name"></p>
           </div>
           <div class="ol-input">
             <button data-hierarchy="Wheel" name="wheelDown" class="command-select-field"></button>
