--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -63,174 +63,181 @@
   <iframe id="Content" height="100%" src="#"></iframe>
 
   <template id="CommandSettings">
-    <template data-commands="NewTab">
-      <span data-i18n="commandSettingNameNewTabPosition" class="cb-setting-name"></span>
+    <template data-commands="SaveImage">
+      <span data-i18n="commandSettingLabelSavePromptDialog" class="cb-setting-name"></span>
+      <input name="promptDialog" id="CommandSettingSavePromptDialog" class="toggle-button" type="checkbox">
+      <label for="CommandSettingSavePromptDialog"></label>
+      <p data-i18n="commandSettingDescriptionSavePromptDialog" class="cb-setting-description"></p>
+    </template>
+
+    <template data-commands="SearchTextSelection">
+      <span data-i18n="commandSettingLabelSearchEngineURL" class="cb-setting-name"></span>
+      <p data-i18n="commandSettingDescriptionSearchEngineURL" class="cb-setting-description"></p>
+      <input name="searchEngineURL" class="input-field" required="" type="url">
+    </template>
+
+    <template data-commands="OpenCustomURL OpenCustomURLInNewTab">
+      <span data-i18n="commandSettingLabelCustomURL" class="cb-setting-name"></span>
+      <p data-i18n="commandSettingDescriptionCustomURL" class="cb-setting-description"></p>
+      <input name="url" class="input-field" required="" type="url">
+    </template>
+
+    <template data-commands="NewTab OpenImageInNewTab SearchTextSelection OpenCustomURLInNewTab OpenURLFromClipboardInNewTab">
+      <span data-i18n="commandSettingLabelNewTabPosition" class="cb-setting-name"></span>
       <p data-i18n="commandSettingDescriptionNewTabPosition" class="cb-setting-description"></p>
       <div class="select-wrapper">
         <select name="position" class="select-field">
-          <option value="default" data-i18n="commandSettingNameNewTabPositionDefault"></option>
-          <option value="after" data-i18n="commandSettingNameNewTabPositionAfter"></option>
-          <option value="before" data-i18n="commandSettingNameNewTabPositionBefore"></option>
+          <option value="default" data-i18n="commandSettingLabelNewTabPositionDefault"></option>
+          <option value="after" data-i18n="commandSettingLabelNewTabPositionAfter"></option>
+          <option value="before" data-i18n="commandSettingLabelNewTabPositionBefore"></option>
         </select>
       </div>
     </template>
 
-    <template data-commands="NewTab OpenImageInNewTab OpenLinkInNewTab SearchSelection OpenCustomURLInNewTab">
-      <span data-i18n="commandSettingNameNewTabFocus" class="cb-setting-name"></span>
+    <template data-commands="NewTab OpenImageInNewTab OpenLinkInNewTab SearchTextSelection OpenCustomURLInNewTab OpenURLFromClipboardInNewTab">
+      <span data-i18n="commandSettingLabelNewTabFocus" class="cb-setting-name"></span>
       <input name="focus" id="CommandSettingTabFocus" class="toggle-button" type="checkbox">
       <label for="CommandSettingTabFocus"></label>
       <p data-i18n="commandSettingDescriptionNewTabFocus" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="CloseTab">
-      <span data-i18n="commandSettingNameTabNextFocus" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelTabNextFocus" class="cb-setting-name"></span>
       <p data-i18n="commandSettingDescriptionTabNextFocus" class="cb-setting-description"></p>
       <div class="select-wrapper">
         <select name="nextFocus" class="select-field">>
-          <option value="default" data-i18n="commandSettingNameTabNextFocusDefault"></option>
-          <option value="previous" data-i18n="commandSettingNameTabNextFocusPrevious"></option>
-          <option value="next" data-i18n="commandSettingNameTabNextFocusNext"></option>
-          <option value="last" data-i18n="commandSettingNameTabNextFocusRecently"></option>
+          <option value="default" data-i18n="commandSettingLabelTabNextFocusDefault"></option>
+          <option value="previous" data-i18n="commandSettingLabelTabNextFocusPrevious"></option>
+          <option value="next" data-i18n="commandSettingLabelTabNextFocusNext"></option>
+          <option value="last" data-i18n="commandSettingLabelTabNextFocusRecently"></option>
         </select>
       </div>
     </template>
 
     <template data-commands="CloseTab">
-      <span data-i18n="commandSettingNameTabClosePinned" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelTabClosePinned" class="cb-setting-name"></span>
       <input name="closePinned" id="CommandSettingTabClosePinned" class="toggle-button" type="checkbox">
       <label for="CommandSettingTabClosePinned"></label>
       <p data-i18n="commandSettingDescriptionTabClosePinned" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="RestoreTab">
-      <span data-i18n="commandSettingNameRestoreCurrentWindow" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelRestoreCurrentWindow" class="cb-setting-name"></span>
       <input name="currentWindowOnly" id="CommandSettingRestoreCurrentWindow" class="toggle-button" type="checkbox">
       <label for="CommandSettingRestoreCurrentWindow"></label>
       <p data-i18n="commandSettingDescriptionRestoreCurrentWindow" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="ReloadTab ReloadFrame ReloadAllTabs">
-      <span data-i18n="commandSettingNameReloadCache" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelReloadCache" class="cb-setting-name"></span>
       <input name="cache" id="CommandSettingReloadCache" class="toggle-button" type="checkbox">
       <label for="CommandSettingReloadCache"></label>
       <p data-i18n="commandSettingDescriptionReloadCache" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="ZoomIn ZoomOut">
-      <span data-i18n="commandSettingNameZoomStep" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelZoomStep" class="cb-setting-name"></span>
       <p data-i18n="commandSettingDescriptionZoomStep" class="cb-setting-description"></p>
       <input name="step" class="input-field" step="1" max="300" min="1" type="number">
     </template>
 
     <template data-commands="ScrollTop ScrollBottom ScrollPageDown ScrollPageUp">
-      <span data-i18n="commandSettingNameScrollDuration" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelScrollDuration" class="cb-setting-name"></span>
       <p data-i18n="commandSettingDescriptionScrollDuration" class="cb-setting-description"></p>
       <input name="duration" class="input-field" required="" step="1" max="5000" min="0" type="number">
     </template>
 
     <template data-commands="FocusFirstTab">
-      <span data-i18n="commandSettingNameFocusIncludePinned" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelFocusIncludePinned" class="cb-setting-name"></span>
       <input name="includePinned" id="CommandSettingFocusIncludePinned" class="toggle-button" type="checkbox">
       <label for="CommandSettingFocusIncludePinned"></label>
       <p data-i18n="commandSettingDescriptionFocusIncludePinned" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="OpenLinkInNewTab">
-      <span data-i18n="commandSettingNameOpenEmptyTab" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelOpenEmptyTab" class="cb-setting-name"></span>
       <input name="emptyTab" id="CommandSettingToEmptyTab" class="toggle-button" type="checkbox">
       <label for="CommandSettingToEmptyTab"></label>
       <p data-i18n="commandSettingDescriptionOpenEmptyTab" class="cb-setting-description"></p>
     </template>
 
-    <template data-commands="SearchTextSelection">
-      <span data-i18n="commandSettingNameSearchEngineURL" class="cb-setting-name"></span>
-      <p data-i18n="commandSettingDescriptionSearchEngineURL" class="cb-setting-description"></p>
-      <input name="searchEngineURL" class="input-field" required="" type="url">
-    </template>
-
-    <template data-commands="SaveImage">
-      <span data-i18n="commandSettingNameSavePromptDialog" class="cb-setting-name"></span>
-      <input name="promptDialog" id="CommandSettingSavePromptDialog" class="toggle-button" type="checkbox">
-      <label for="CommandSettingSavePromptDialog"></label>
-      <p data-i18n="commandSettingDescriptionSavePromptDialog" class="cb-setting-description"></p>
-    </template>
-
-    <template data-commands="OpenCustomURL OpenCustomURLInNewTab">
-      <span data-i18n="commandSettingNameCustomURL" class="cb-setting-name"></span>
-      <p data-i18n="commandSettingDescriptionCustomURL" class="cb-setting-description"></p>
-      <input name="url" class="input-field" required="" type="url">
-    </template>
-
     <template data-commands="SendMessageToOtherAddon">
-      <span data-i18n="commandSettingNameCustomURL" class="cb-setting-name"></span>
-      <a href="#" data-i18n="commandSettingDescriptionCustomURL" class="cb-setting-description"></a>
+      <span data-i18n="commandSettingLabelAddonId" class="cb-setting-name"></span>
+      <a href="#" data-i18n="commandSettingDescriptionAddonId" class="cb-setting-description"></a>
       <input name="extensionId" class="input-field" required="" type="text">
     </template>
 
     <template data-commands="SendMessageToOtherAddon">
-      <span data-i18n="commandSettingNameCustomURL" class="cb-setting-name"></span>
-      <p data-i18n="commandSettingDescriptionCustomURL" class="cb-setting-description"></p>
+      <span data-i18n="commandSettingLabelAddonMessage" class="cb-setting-name"></span>
+      <p data-i18n="commandSettingDescriptionAddonMessage" class="cb-setting-description"></p>
       <textarea name="message" class="text-field" required=""></textarea>
     </template>
 
+    <template data-commands="SendMessageToOtherAddon">
+      <span data-i18n="commandSettingLabelParseMessage" class="cb-setting-name"></span>
+      <input name="parseJSON" id="CommandSettingToEmptyTab" class="toggle-button" type="checkbox">
+      <label for="CommandSettingToEmptyTab"></label>
+      <p data-i18n="commandSettingDescriptionParseMessage" class="cb-setting-description"></p>
+    </template>
+
     <template data-commands="ClearBrowsingData">
-      <span data-i18n="commandSettingNameClearBrowsingDataCache" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelClearBrowsingDataCache" class="cb-setting-name"></span>
       <input name="cache" id="CommandSettingClearBrowsingDataCache" class="toggle-button" type="checkbox">
       <label for="CommandSettingClearBrowsingDataCache"></label>
       <p data-i18n="commandSettingDescriptionClearBrowsingDataCache" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="ClearBrowsingData">
-      <span data-i18n="commandSettingNameClearBrowsingDataCookies" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelClearBrowsingDataCookies" class="cb-setting-name"></span>
       <input name="cookies" id="CommandSettingClearBrowsingDataCookies" class="toggle-button" type="checkbox">
       <label for="CommandSettingClearBrowsingDataCookies"></label>
       <p data-i18n="commandSettingDescriptionClearBrowsingDataCookies" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="ClearBrowsingData">
-      <span data-i18n="commandSettingNameClearBrowsingDataDownloads" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelClearBrowsingDataDownloads" class="cb-setting-name"></span>
       <input name="downloads" id="CommandSettingClearBrowsingDataDownloads" class="toggle-button" type="checkbox">
       <label for="CommandSettingClearBrowsingDataDownloads"></label>
       <p data-i18n="commandSettingDescriptionClearBrowsingDataDownloads" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="ClearBrowsingData">
-      <span data-i18n="commandSettingNameClearBrowsingDataFormData" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelClearBrowsingDataFormData" class="cb-setting-name"></span>
       <input name="formData" id="CommandSettingClearBrowsingDataFormData" class="toggle-button" type="checkbox">
       <label for="CommandSettingClearBrowsingDataFormData"></label>
       <p data-i18n="commandSettingDescriptionClearBrowsingDataFormData" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="ClearBrowsingData">
-      <span data-i18n="commandSettingNameClearBrowsingDataHistory" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelClearBrowsingDataHistory" class="cb-setting-name"></span>
       <input name="history" id="CommandSettingClearBrowsingDataHistory" class="toggle-button" type="checkbox">
       <label for="CommandSettingClearBrowsingDataHistory"></label>
       <p data-i18n="commandSettingDescriptionClearBrowsingDataHistory" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="ClearBrowsingData">
-      <span data-i18n="commandSettingNameClearBrowsingDataLocalStorage" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelClearBrowsingDataLocalStorage" class="cb-setting-name"></span>
       <input name="localStorage" id="CommandSettingClearBrowsingDataLocalStorage" class="toggle-button" type="checkbox">
       <label for="CommandSettingClearBrowsingDataLocalStorage"></label>
       <p data-i18n="commandSettingDescriptionClearBrowsingDataLocalStorage" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="ClearBrowsingData">
-      <span data-i18n="commandSettingNameClearBrowsingDataPasswords" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelClearBrowsingDataPasswords" class="cb-setting-name"></span>
       <input name="passwords" id="CommandSettingClearBrowsingDataPasswords" class="toggle-button" type="checkbox">
       <label for="CommandSettingClearBrowsingDataPasswords"></label>
       <p data-i18n="commandSettingDescriptionClearBrowsingDataPasswords" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="ClearBrowsingData">
-      <span data-i18n="commandSettingNameClearBrowsingDataPluginData" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelClearBrowsingDataPluginData" class="cb-setting-name"></span>
       <input name="pluginData" id="CommandSettingClearBrowsingDataPluginData" class="toggle-button" type="checkbox">
       <label for="CommandSettingClearBrowsingDataPluginData"></label>
       <p data-i18n="commandSettingDescriptionClearBrowsingDataPluginData" class="cb-setting-description"></p>
     </template>
 
     <template data-commands="ClearBrowsingData">
-      <span data-i18n="commandSettingNameClearBrowsingDataServiceWorkers" class="cb-setting-name"></span>
+      <span data-i18n="commandSettingLabelClearBrowsingDataServiceWorkers" class="cb-setting-name"></span>
       <input name="serviceWorkers" id="CommandSettingClearBrowsingDataServiceWorkers" class="toggle-button" type="checkbox">
       <label for="CommandSettingClearBrowsingDataServiceWorkers"></label>
       <p data-i18n="commandSettingDescriptionClearBrowsingDataServiceWorkers" class="cb-setting-description"></p>
