--- a/src/ui/html/content/gestures.html
+++ b/src/ui/html/content/gestures.html
@@ -17,8 +17,8 @@
   <main id="Main">
     <h1 data-i18n="navigationGestures"></h1>
     <p class="justify-text">
-      <em data-i18n="explanationGesturesHeading"></em>
-      <span class="small-text" data-i18n="explanationGesturesText"></span>
+      <em data-i18n="gestureLabelInformation"></em>
+      <span class="small-text" data-i18n="gestureTextInformation"></span>
     </p>
     <hr>
     <ul id="Gestures" class="gesture-list"></ul>
