--- a/src/ui/html/content/settings.html
+++ b/src/ui/html/content/settings.html
@@ -18,27 +18,27 @@
       <section class="ol-section">
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="settingNameMouseButton" class="ol-name"></p>
+            <p data-i18n="settingLabelMouseButton" class="ol-name"></p>
             <p data-i18n="settingDescriptionMouseButton" class="ol-description"></p>
           </div>
           <div class="ol-input">
             <div class="select-wrapper">
               <select data-hierarchy="Gesture" name="mouseButton" class="select-field">
-                <option value="1" data-i18n="settingNameMouseButtonLeft"></option>
-                <option value="2" data-i18n="settingNameMouseButtonRight"></option>
-                <option value="4" data-i18n="settingNameMouseButtonMiddle"></option>
+                <option value="1" data-i18n="settingLabelMouseButtonLeft"></option>
+                <option value="2" data-i18n="settingLabelMouseButtonRight"></option>
+                <option value="4" data-i18n="settingLabelMouseButtonMiddle"></option>
               </select>
             </div>
           </div>
         </div>
         <div class="ol-item">
           <input id="CollapseAdvancedSettings" class="collapseButton" data-collapse="#advancedSettings" type="checkbox">
-          <label data-i18n="settingNameAdvancedSettings" for="CollapseAdvancedSettings"></label>
+          <label data-i18n="settingLabelAdvancedSettings" for="CollapseAdvancedSettings"></label>
         </div>
         <div id="advancedSettings" class="ol-collapsible hide">
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameDistanceThreshold" class="ol-name"></p>
+              <p data-i18n="settingLabelDistanceThreshold" class="ol-name"></p>
               <p data-i18n="settingDescriptionDistanceThreshold" class="ol-description"></p>
             </div>
             <div class="ol-input">
@@ -47,7 +47,7 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameDistanceSensitivity" class="ol-name"></p>
+              <p data-i18n="settingLabelDistanceSensitivity" class="ol-name"></p>
               <p data-i18n="settingDescriptionDistanceSensitivity" class="ol-description"></p>
             </div>
             <div class="ol-input">
@@ -57,23 +57,23 @@
         </div>
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="settingNameSuppressionKey" class="ol-name"></p>
+            <p data-i18n="settingLabelSuppressionKey" class="ol-name"></p>
             <p data-i18n="settingDescriptionSuppressionKey" class="ol-description"></p>
           </div>
           <div class="ol-input">
             <div class="select-wrapper">
               <select data-hierarchy="Gesture" name="suppressionKey" class="select-field">
-                <option value="" data-i18n="settingNameNoneKey"></option>
-                <option value="altKey" data-i18n="settingNameAltKey"></option>
-                <option value="ctrlKey" data-i18n="settingNameCtrlKey"></option>
-                <option value="shiftKey" data-i18n="settingNameShiftKey"></option>
+                <option value="" data-i18n="settingLabelNoneKey"></option>
+                <option value="altKey" data-i18n="settingLabelAltKey"></option>
+                <option value="ctrlKey" data-i18n="settingLabelCtrlKey"></option>
+                <option value="shiftKey" data-i18n="settingLabelShiftKey"></option>
               </select>
             </div>
           </div>
         </div>
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="settingNameTimeoutActive" class="ol-name"></p>
+            <p data-i18n="settingLabelTimeoutActive" class="ol-name"></p>
             <p data-i18n="settingDescriptionTimeoutActive" class="ol-description"></p>
           </div>
           <div class="ol-input">
@@ -84,7 +84,7 @@
         <div id="timeoutSettings" class="ol-collapsible">
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameTimeoutDuration" class="ol-name"></p>
+              <p data-i18n="settingLabelTimeoutDuration" class="ol-name"></p>
               <p data-i18n="settingDescriptionTimeoutDuration" class="ol-description"></p>
             </div>
             <div class="ol-input">
@@ -97,7 +97,7 @@
       <section class="ol-section">
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="settingNameDisplayTrace" class="ol-name"></p>
+            <p data-i18n="settingLabelDisplayTrace" class="ol-name"></p>
             <p data-i18n="settingDescriptionDisplayTrace" class="ol-description"></p>
           </div>
           <div class="ol-input">
@@ -108,7 +108,7 @@
         <div id="traceSettings" class="ol-collapsible">
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameTraceColor" class="ol-name"></p>
+              <p data-i18n="settingLabelTraceColor" class="ol-name"></p>
             </div>
             <div class="ol-input">
               <input data-hierarchy="Gesture.Trace.Style" name="strokeStyle" class="color-select-field" type="color" required>
@@ -116,7 +116,7 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameTraceOpacity" class="ol-name"></p>
+              <p data-i18n="settingLabelTraceOpacity" class="ol-name"></p>
             </div>
             <div class="ol-input">
               <input data-hierarchy="Gesture.Trace.Style" name="opacity" class="input-field" type="number" required step="0.01" max="1" min="0">
@@ -124,7 +124,7 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameTraceWidth" class="ol-name"></p>
+              <p data-i18n="settingLabelTraceWidth" class="ol-name"></p>
             </div>
             <div class="ol-input">
               <input data-hierarchy="Gesture.Trace.Style" name="lineWidth" class="input-field" type="number" required step="1" max="999" min="1">
@@ -132,7 +132,7 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameTraceGrowth" class="ol-name"></p>
+              <p data-i18n="settingLabelTraceGrowth" class="ol-name"></p>
               <p data-i18n="settingDescriptionTraceGrowth" class="ol-description"></p>
             </div>
             <div class="ol-input">
@@ -146,7 +146,7 @@
       <section class="ol-section">
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="settingNameDisplayCommand" class="ol-name"></p>
+            <p data-i18n="settingLabelDisplayCommand" class="ol-name"></p>
             <p data-i18n="settingDescriptionDisplayCommand" class="ol-description"></p>
           </div>
           <div class="ol-input">
@@ -156,7 +156,7 @@
         <div id="actionSettings" class="ol-collapsible">
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameCommandColor" class="ol-name"></p>
+              <p data-i18n="settingLabelCommandColor" class="ol-name"></p>
             </div>
             <div class="ol-input">
               <input data-hierarchy="Gesture.Command.Style" name="color" class="color-select-field" type="color" required>
@@ -164,7 +164,7 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameCommandBackgroundColor" class="ol-name"></p>
+              <p data-i18n="settingLabelCommandBackgroundColor" class="ol-name"></p>
             </div>
             <div class="ol-input">
               <input data-hierarchy="Gesture.Command.Style" name="backgroundColor" class="color-select-field" type="color" required>
@@ -172,7 +172,7 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameCommandBackgroundOpacity" class="ol-name"></p>
+              <p data-i18n="settingLabelCommandBackgroundOpacity" class="ol-name"></p>
             </div>
             <div class="ol-input">
               <input data-hierarchy="Gesture.Command.Style" name="backgroundOpacity" class="input-field" type="number" required step="0.01" max="1" min="0">
@@ -180,7 +180,7 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameCommandFontSize" class="ol-name"></p>
+              <p data-i18n="settingLabelCommandFontSize" class="ol-name"></p>
               <p data-i18n="settingDescriptionCommandFontSize" class="ol-description"></p>
             </div>
             <div class="ol-input">
@@ -193,7 +193,7 @@
       <section class="ol-section">
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="settingNameDisplayDirections" class="ol-name"></p>
+            <p data-i18n="settingLabelDisplayDirections" class="ol-name"></p>
             <p data-i18n="settingDescriptionDisplayDirections" class="ol-description"></p>
           </div>
           <div class="ol-input">
@@ -204,7 +204,7 @@
         <div id="directionsSettings" class="ol-collapsible">
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameDirectionsColor" class="ol-name"></p>
+              <p data-i18n="settingLabelDirectionsColor" class="ol-name"></p>
             </div>
             <div class="ol-input">
               <input data-hierarchy="Gesture.Directions.Style" name="color" class="color-select-field" type="color" required>
@@ -212,7 +212,7 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameDirectionsBackgroundColor" class="ol-name"></p>
+              <p data-i18n="settingLabelDirectionsBackgroundColor" class="ol-name"></p>
             </div>
             <div class="ol-input">
               <input data-hierarchy="Gesture.Directions.Style" name="backgroundColor" class="color-select-field" type="color" required>
@@ -220,7 +220,7 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameDirectionsBackgroundOpacity" class="ol-name"></p>
+              <p data-i18n="settingLabelDirectionsBackgroundOpacity" class="ol-name"></p>
             </div>
             <div class="ol-input">
               <input data-hierarchy="Gesture.Directions.Style" name="backgroundOpacity" class="input-field" type="number" required step="0.01" max="1" min="0">
@@ -228,7 +228,7 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameDirectionsFontSize" class="ol-name"></p>
+              <p data-i18n="settingLabelDirectionsFontSize" class="ol-name"></p>
               <p data-i18n="settingDescriptionDirectionsFontSize" class="ol-description"></p>
             </div>
             <div class="ol-input">
@@ -237,14 +237,14 @@
           </div>
           <div class="ol-item">
             <div class="ol-label">
-              <p data-i18n="settingNameDirectionsTextAlign" class="ol-name"></p>
+              <p data-i18n="settingLabelDirectionsTextAlign" class="ol-name"></p>
             </div>
             <div class="ol-input">
               <div class="select-wrapper">
                 <select data-hierarchy="Gesture.Directions.Style" name="textAlign" class="select-field">
-                  <option value="left" data-i18n="settingNameDirectionsTextAlignLeft"></option>
-                  <option value="right" data-i18n="settingNameDirectionsTextAlignRight"></option>
-                  <option value="center" data-i18n="settingNameDirectionsTextAlignCenter"></option>
+                  <option value="left" data-i18n="settingLabelDirectionsTextAlignLeft"></option>
+                  <option value="right" data-i18n="settingLabelDirectionsTextAlignRight"></option>
+                  <option value="center" data-i18n="settingLabelDirectionsTextAlignCenter"></option>
                 </select>
               </div>
             </div>
@@ -255,7 +255,7 @@
       <section class="ol-section">
         <div class="ol-item">
           <div class="ol-label">
-            <p data-i18n="settingNameUpdateNotification" class="ol-name"></p>
+            <p data-i18n="settingLabelUpdateNotification" class="ol-name"></p>
             <p data-i18n="settingDescriptionUpdateNotification" class="ol-description"></p>
           </div>
           <div class="ol-input">
