--- a/src/ui/html/content/blacklist.html
+++ b/src/ui/html/content/blacklist.html
@@ -16,6 +16,7 @@
     <p class="justify-text">
       <em data-i18n="blacklistLabelInformation"></em>
       <span class="small-text" data-i18n="blacklistTextInformation"></span>
+      <a class="small-text" target="_blank" href="https://github.com/Robbendebiene/Gesturefy/wiki/Blacklist" data-i18n="LinkReadWiki"></a>
     </p>
     <hr>
     <form id="BlacklistForm" class="bl-form">
