--- a/src/ui/html/content/extras.html
+++ b/src/ui/html/content/extras.html
@@ -32,7 +32,7 @@
             <p data-i18n="extraLabelRockerLeftMouseClick" class="ol-name"></p>
           </div>
           <div class="ol-input">
-            <button data-hierarchy="Rocker" name="leftMouseClick" class="command-select-field"></button>
+            <button data-hierarchy="Rocker" name="leftMouseClick" class="command-select-field" type="button"></button>
           </div>
         </div>
         <div class="ol-item">
@@ -40,7 +40,7 @@
             <p data-i18n="extraLabelRockerRightMouseClick" class="ol-name"></p>
           </div>
           <div class="ol-input">
-            <button data-hierarchy="Rocker" name="rightMouseClick" class="command-select-field"></button>
+            <button data-hierarchy="Rocker" name="rightMouseClick" class="command-select-field" type="button"></button>
           </div>
         </div>
       </section>
@@ -75,7 +75,7 @@
             <p data-i18n="extraLabelWheelUp" class="ol-name"></p>
           </div>
           <div class="ol-input">
-            <button data-hierarchy="Wheel" name="wheelUp" class="command-select-field"></button>
+            <button data-hierarchy="Wheel" name="wheelUp" class="command-select-field" type="button"></button>
           </div>
         </div>
         <div class="ol-item">
@@ -83,7 +83,7 @@
             <p data-i18n="extraLabelWheelDown" class="ol-name"></p>
           </div>
           <div class="ol-input">
-            <button data-hierarchy="Wheel" name="wheelDown" class="command-select-field"></button>
+            <button data-hierarchy="Wheel" name="wheelDown" class="command-select-field" type="button"></button>
           </div>
         </div>
       </section>
