minor command bar changes/fixes

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -163,7 +163,10 @@
 
     <template data-commands="SendMessageToOtherAddon">
       <span data-i18n="commandSettingLabelAddonId" class="cb-setting-name"></span>
-      <a href="#" data-i18n="commandSettingDescriptionAddonId" class="cb-setting-description"></a>
+      <p class="cb-setting-description">
+        <span data-i18n="commandSettingDescriptionAddonId"></span>
+        <a target="_blank" href="https://github.com/Robbendebiene/Gesturefy/wiki/Send-message-to-other-addon" data-i18n="LinkReadWiki"></a>
+      </p>
       <input name="extensionId" class="input-field" required="" type="text">
     </template>
 
