gesture list/popup intermediate state commit

--- a/src/ui/html/content/gestures.html
+++ b/src/ui/html/content/gestures.html
@@ -21,6 +21,7 @@
       <span class="small-text" data-i18n="gestureTextInformation"></span>
     </p>
     <hr>
+    <button id="NewGesture" class="gl-add-button icon-add" type="button"></button>
     <ul id="Gestures" class="gesture-list"></ul>
   </main>
 </body>
