improved theme switch

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -54,8 +54,15 @@
       </li>
     </ul>
 
-    <div class="theme-circles" id="themeCircles">
-      <div class="theme-wrapper" id="themeWrapper"></div>
+    <div class="themes" id="themes">
+      <input type="radio" name="theme" id="themeDefault">
+      <label class="theme-btn theme-default" for="themeDefault" data-val="default"></label>
+      <input type="radio" name="theme" id="themeWhite">
+      <label class="theme-btn theme-white" for="themeWhite"data-val="white"></label>
+      <input type="radio" name="theme" id="themeDarker">
+      <label class="theme-btn theme-darker" for="themeDarker" data-val="darker"></label>
+      <input type="radio" name="theme" id="themeDark">
+      <label class="theme-btn theme-dark" for="themeDark" data-val="dark"></label>
     </div>
 
   </div>
