enhanced theme switch code + minor css changes

--- a/src/ui/html/index.html
+++ b/src/ui/html/index.html
@@ -54,19 +54,16 @@
       </li>
     </ul>
 
-    <div class="themes" id="themes">
-      <form name="themeSwitch">
-        <input type="radio" name="theme" id="themeDefault" value="default">
-        <label class="theme-button theme-default" for="themeDefault"></label>
-        <input type="radio" name="theme" id="themeWhite" value="white">
-        <label class="theme-button theme-white" for="themeWhite"></label>
-        <input type="radio" name="theme" id="themeDarker" value="darker">
-        <label class="theme-button theme-darker" for="themeDarker"></label>
-        <input type="radio" name="theme" id="themeDark" value="dark">
-        <label class="theme-button theme-dark" for="themeDark"></label>
-      </form>
-    </div>
-
+    <form class="themes" id="themeSwitch">
+      <input type="radio" name="theme" id="themeDefault" value="default">
+      <label class="theme-button theme-default" for="themeDefault"></label>
+      <input type="radio" name="theme" id="themeWhite" value="white">
+      <label class="theme-button theme-white" for="themeWhite"></label>
+      <input type="radio" name="theme" id="themeDarker" value="darker">
+      <label class="theme-button theme-darker" for="themeDarker"></label>
+      <input type="radio" name="theme" id="themeDark" value="dark">
+      <label class="theme-button theme-dark" for="themeDark"></label>
+    </form>
   </div>
 
   <iframe id="Content" height="100%" src="#"></iframe>
